objects/Integration_Error__c.object
<CustomObject>
    <description>Stores integration errors.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>The URL of the endpoint where the payload was sent</description>
        <inlineHelpText>The URL of the endpoint where the payload was sent</inlineHelpText>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>The Request of the callout if applicable</description>
        <inlineHelpText>The Request of the callout if applicable</inlineHelpText>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Readable title for identification</description>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Integration Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_With_Info</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All With Info</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Title_List</fullName>
        <columns>Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Title List</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Integration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>